2007-03-21  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/schedule.h: checks if arg is NULL in SCHED_KILL.
	* src/racoon/{handler.c|isakmp.c|isakmp_inf.c|pfkey.c}: NULL sched
	  check is now done in SCHED_KILL.
	
2007-03-15  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/isakmp.c: Consider a negociation timeout when
	  retry_counter is <=0 instead of < 0.
	* src/racoon/grabmyaddr.c: enable monitoring of ipv6 addresse
	  changes on linux. Patch by Yves-Alexis Perez.

---------------------------------------------

	0.7.beta2 released

2007-02-27  Matthew Grooms  <mgrooms@shrew.net>
	* src/racoon/ipsec_doi.c: add logic to match ip address ids to
	  ip subnet ids when appropriate. reported by Yvan.

2007-02-21  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/ipsec_doi.c: block variable declaration before code
	  in ipsecdoi_id2str().
	
2007-02-20  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/{handler.c|isakmp_var.h}: updated delete_spd() calls.
	* src/racoon/isakmp.c: Only delete a generated SPD if it's
	  creation date matches the creation date of the SA we are
	  currently deleting.
	* src/racoon/{pfkey.c|isakmp_inf.c}: fills creation date of
	  generated SPDs.
	* src/racoon/policy.h: added 'created' var.
	* src/racoon/isakmp_inf.c: Removed a debug printf....

2007-02-19  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/isakmp.c: Removed a debug printf....

2007-02-16  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/ipsec_doi.c: Fixed a %zu in a printf. Reported by
	  Olivier Warin.
	
---------------------------------------------

	0.7.beta1 released

2007-02-15  Emmanuel Dreyfus  <manu@netbsd.org>
	* configure.ac: fix typo in SELinux option
	* src/racoon/security.c: missing file from Joy Latten

2007-02-15  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/isakmp.c: Fixed the way phase1/2 messages are
	  sent/resent, to avoid zombie handles and acces to freed memory.
	* src/racoon/isakmp_inf.c: Just expire a ph1 handle when receiving